API is refactored according to REST style
Also:
* Added security keys to swagger
* Refactoring golangci-lint config
