# pkg/api/client.go
@@ -3,9 +3,9 @@ package api
 import (
 	"bytes"
 	"context"
-	"encoding/hex"
 	"encoding/json"
 	"fmt"
+	"io/ioutil"
 	"net/http"
 
 	"github.com/pkg/errors"
@@ -41,13 +41,14 @@ func (c *client) SendPDV(ctx context.Context, data []byte) (string, error) {
 		return "", ErrInvalidRequest
 	}
 
-	req := SendPDVRequest{
-		Data: data,
-	}
-	resp := SendPDVResponse{}
-
-	if err := c.sendRequest(ctx, http.MethodPost, fmt.Sprintf("%s/%s", c.host, SendPDVEndpoint), &req, &resp); err != nil {
+	data, err := c.sendRequest(ctx, http.MethodPost, "v1/pdv", data)
+	if err != nil {
 		return "", fmt.Errorf("failed to make SendPDV request: %w", err)
+	}
+
+	resp := SendPDVResponse{}
+	if err := json.Unmarshal(data, &resp); err != nil {
+		return "", fmt.Errorf("failed to decode json: %w", err)
 	}
 
 	return resp.Address, nil
@@ -55,22 +56,17 @@ func (c *client) SendPDV(ctx context.Context, data []byte) (string, error) {
 
 // ReceivePDV receives bytes slice from Cerberus by provided address.
 // ReceivePDV can return ErrInvalidRequest and ErrNotFound besides general api package's errors.
-func (c *client) ReceivePDV(ctx context.Context, address string) ([]byte, error) {
-	if address == "" {
-		// nolint:godox
-		return nil, ErrInvalidRequest // todo: make a strong check
+func (c *client) ReceivePDV(ctx context.Context, address string) (json.RawMessage, error) {
+	if !IsAddressValid(address) {
+		return nil, ErrInvalidRequest
 	}
 
-	req := ReceivePDVRequest{
-		Address: address,
-	}
-	resp := ReceivePDVResponse{}
-
-	if err := c.sendRequest(ctx, http.MethodPost, fmt.Sprintf("%s/%s", c.host, ReceivePDVEndpoint), &req, &resp); err != nil {
+	data, err := c.sendRequest(ctx, http.MethodGet, fmt.Sprintf("v1/pdv/%s", address), nil)
+	if err != nil {
 		return nil, fmt.Errorf("failed to make ReceivePDV request: %w", err)
 	}
 
-	return resp.Data, nil
+	return data, nil
 }
 
 // DoesPDVExist returns is data exists in Cerberus by provided address.
@@ -80,84 +76,54 @@ func (c *client) DoesPDVExist(ctx context.Context, address string) (bool, error)
 		return false, ErrInvalidRequest
 	}
 
-	resp := DoesPDVExistResponse{}
-	url := fmt.Sprintf("%s/%s?address=%s", c.host, DoesPDVExistEndpoint, address)
-	if err := c.sendRequest(ctx, http.MethodGet, url, nil, &resp); err != nil {
+	_, err := c.sendRequest(ctx, http.MethodHead, fmt.Sprintf("v1/pdv/%s", address), nil)
+	if err != nil {
+		if errors.Is(err, ErrNotFound) {
+			return false, nil
+		}
 		return false, fmt.Errorf("failed to make DoesPDVExist request: %w", err)
 	}
 
-	return resp.Exists, nil
+	return true, nil
 }
 
 // sendRequest is utility method which signs request, if it's needed, and send POST request to Cerberus.
 // Also converts http.StatusCode to package's errors.
-func (c *client) sendRequest(ctx context.Context, method string, endpoint string, data interface{}, resp interface{}) error {
-	if v, ok := data.(Validator); ok && !v.IsValid() {
-		return ErrInvalidRequest
-	}
-
-	if err := c.signRequest(data); err != nil {
-		return fmt.Errorf("failed to sign request: %w", err)
-	}
-
-	body, err := json.Marshal(data)
-	if err != nil {
-		return fmt.Errorf("failed to marshal request: %w", err)
-	}
-
+func (c *client) sendRequest(ctx context.Context, method, endpoint string, body []byte) ([]byte, error) {
 	r, err := http.NewRequestWithContext(ctx, method, fmt.Sprintf("%s/%s", c.host, endpoint), bytes.NewReader(body))
 	if err != nil {
-		return fmt.Errorf("failed to create request: %w", err)
+		return nil, fmt.Errorf("failed to create request: %w", err)
 	}
 
-	rr, err := c.c.Do(r)
+	if err := Sign(r, c.pk); err != nil {
+		return nil, fmt.Errorf("failed to sign request: %w", err)
+	}
+
+	resp, err := c.c.Do(r)
 	if err != nil {
-		return fmt.Errorf("failed to post SendPDV request: %w", err)
+		return nil, fmt.Errorf("failed to do request: %w", err)
 	}
-	defer rr.Body.Close()
+	defer resp.Body.Close() // nolint
 
-	if rr.StatusCode < 200 || rr.StatusCode >= 300 {
-		switch rr.StatusCode {
+	if resp.StatusCode < 200 || resp.StatusCode >= 300 {
+		switch resp.StatusCode {
 		case http.StatusNotFound:
-			return ErrNotFound
+			return nil, ErrNotFound
 		case http.StatusBadRequest:
-			return ErrInvalidRequest
+			return nil, ErrInvalidRequest
 		default:
 			var e Error
-			if err := json.NewDecoder(rr.Body).Decode(&e); err != nil {
-				return errors.Errorf("request failed with status %d", rr.StatusCode)
+			if err := json.NewDecoder(resp.Body).Decode(&e); err != nil {
+				return nil, errors.Errorf("request failed with status %d", resp.StatusCode)
 			}
-			return errors.Errorf("request failed: %s", e.Error)
+			return nil, errors.Errorf("request failed: %s", e.Error)
 		}
 	}
 
-	if err := json.NewDecoder(rr.Body).Decode(&resp); err != nil {
-		return fmt.Errorf("failed to decode response: %w", err)
-	}
-
-	return nil
-}
-
-func (c *client) signRequest(r interface{}) error {
-	s, ok := r.(signatureSetter)
-	if !ok {
-		return nil
-	}
-
-	d, err := Digest(r)
+	data, err := ioutil.ReadAll(resp.Body)
 	if err != nil {
-		return fmt.Errorf("failed to get digest: %w", err)
+		return nil, fmt.Errorf("failed to read response body: %w", err)
 	}
 
-	sign, err := c.pk.Sign(d)
-	if err != nil {
-		return fmt.Errorf("failed to sign digest: %w", err)
-	}
-
-	s.setSignature(Signature{
-		PublicKey: hex.EncodeToString(c.pk.PubKey().Bytes()),
-		Signature: hex.EncodeToString(sign),
-	})
-
-	return nil
+	return data, nil
 }
