# pkg/api/response.go
@@ -1,21 +1,0 @@
-package api
-
-// Error ...
-type Error struct {
-	Error string `json:"error"`
-}
-
-// SendPDVResponse ...
-type SendPDVResponse struct {
-	Address string `json:"address"`
-}
-
-// ReceivePDVResponse ...
-type ReceivePDVResponse struct {
-	Data []byte `json:"data"`
-}
-
-// DoesPDVExistResponse ...
-type DoesPDVExistResponse struct {
-	Exists bool `json:"exists"`
-}
