# static/swagger.json
@@ -16,25 +16,42 @@
   },
   "basePath": "/v1",
   "paths": {
-    "/pdv-exists": {
+    "/pdv": {
       "post": {
+        "security": [
+          {
+            "public_key": []
+          },
+          {
+            "signature": []
+          }
+        ],
+        "consumes": [
+          "application/octet-stream"
+        ],
+        "produces": [
+          "applciation/json"
+        ],
         "tags": [
           "Cerberus"
         ],
-        "summary": "Checks if pdv exists in storage.",
-        "operationId": "DoesPDVExist",
+        "summary": "Encrypts and puts PDV data into storage.",
+        "operationId": "SendPDV",
         "parameters": [
           {
-            "name": "address",
-            "in": "query",
-            "required": true
+            "name": "request",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "file"
+            }
           }
         ],
         "responses": {
-          "200": {
-            "description": "result of check",
+          "201": {
+            "description": "pdv was put into storage",
             "schema": {
-              "$ref": "#/definitions/doesPDVExistResponse"
+              "$ref": "#/definitions/SendPDVResponse"
             }
           },
           "400": {
@@ -58,28 +75,39 @@
         }
       }
     },
-    "/receive-pdv": {
-      "post": {
+    "/pdv/{address}": {
+      "get": {
+        "security": [
+          {
+            "public_key": []
+          },
+          {
+            "signature": []
+          }
+        ],
+        "produces": [
+          "application/octet-stream",
+          "application/json"
+        ],
         "tags": [
           "Cerberus"
         ],
-        "summary": "Gets and decrypts pdv from storage.",
+        "summary": "Gets and decrypts PDV from storage.",
         "operationId": "ReceivePDV",
         "parameters": [
           {
-            "name": "request",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/receivePDVRequest"
-            }
+            "type": "string",
+            "description": "PDV's address",
+            "name": "address",
+            "in": "path",
+            "required": true
           }
         ],
         "responses": {
           "200": {
-            "description": "pdv from storage",
+            "description": "PDV from storage",
             "schema": {
-              "$ref": "#/definitions/receivePDVResponse"
+              "type": "file"
             }
           },
           "400": {
@@ -107,31 +135,25 @@
             }
           }
         }
-      }
-    },
-    "/send-pdv": {
-      "post": {
+      },
+      "head": {
         "tags": [
           "Cerberus"
         ],
-        "summary": "Encrypts and puts PDV data into storage.",
-        "operationId": "SendPDV",
+        "summary": "Checks if PDV exists in storage.",
+        "operationId": "DoesPDVExist",
         "parameters": [
           {
-            "name": "request",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/sendPDVRequest"
-            }
+            "type": "string",
+            "description": "PDV's address",
+            "name": "address",
+            "in": "path",
+            "required": true
           }
         ],
         "responses": {
-          "201": {
-            "description": "pdv was put into storage",
-            "schema": {
-              "$ref": "#/definitions/sendPDVResponse"
-            }
+          "200": {
+            "description": "PDV exists"
           },
           "400": {
             "description": "bad request",
@@ -145,6 +167,9 @@
               "$ref": "#/definitions/Error"
             }
           },
+          "404": {
+            "description": "PDV doesn't exist"
+          },
           "500": {
             "description": "internal server error",
             "schema": {
@@ -156,18 +181,7 @@
     }
   },
   "definitions": {
-    "doesPDVExistResponse": {
-      "type": "object",
-      "properties": {
-        "exists": {
-          "description": "Flag which means file exists or not",
-          "type": "boolean",
-          "x-go-name": "Exists"
-        }
-      },
-      "x-go-package": "github.com/Decentr-net/cerberus/internal/server"
-    },
-    "error": {
+    "Error": {
       "type": "object",
       "properties": {
         "error": {
@@ -176,73 +190,42 @@
           "x-go-name": "Error"
         }
       },
+      "x-go-name": "error",
       "x-go-package": "github.com/Decentr-net/cerberus/internal/server"
     },
-    "receivePDVRequest": {
+    "SendPDVResponse": {
       "type": "object",
       "properties": {
         "address": {
-          "description": "Requested file's address(hash in ipfs)",
-          "type": "string",
-          "x-go-name": "Address"
-        },
-        "signature": {
-          "$ref": "#/definitions/signature"
-        }
-      },
-      "x-go-package": "github.com/Decentr-net/cerberus/internal/server"
-    },
-    "receivePDVResponse": {
-      "type": "object",
-      "properties": {
-        "data": {
-          "description": "Requested file's data encrypted with base64",
-          "type": "string",
-          "x-go-name": "Data"
-        }
-      },
-      "x-go-package": "github.com/Decentr-net/cerberus/internal/server"
-    },
-    "sendPDVRequest": {
-      "type": "object",
-      "properties": {
-        "data": {
-          "description": "Data which encrypted with base64",
-          "type": "string",
-          "x-go-name": "Data"
-        },
-        "signature": {
-          "$ref": "#/definitions/signature"
-        }
-      },
-      "x-go-package": "github.com/Decentr-net/cerberus/internal/server"
-    },
-    "sendPDVResponse": {
-      "type": "object",
-      "properties": {
-        "address": {
-          "description": "Put file address(hash in ipfs)",
+          "description": "Put file address",
           "type": "string",
           "x-go-name": "Address"
         }
       },
-      "x-go-package": "github.com/Decentr-net/cerberus/internal/server"
-    },
-    "signature": {
-      "type": "object",
-      "properties": {
-        "public_key": {
-          "description": "User's public key in hex.",
-          "type": "string",
-          "x-go-name": "PublicKey"
-        },
-        "signature": {
-          "description": "Request's digest signature in hex. Digest is sha256 hash of whole request data (except signature object).\nYou must hash data in order according to request attributes order.",
-          "type": "string",
-          "x-go-name": "Signature"
-        }
-      },
+      "x-go-name": "sendPDVResponse",
       "x-go-package": "github.com/Decentr-net/cerberus/internal/server"
     }
-  }
+  },
+  "securityDefinitions": {
+    "public_key": {
+      "description": "Blockchain account's public key",
+      "type": "apiKey",
+      "name": "Public-Key",
+      "in": "header"
+    },
+    "signature": {
+      "description": "Signature of request digest.\nDigest is sha256 sum of request: {body as is}+{request uri}.\nFor example:\n   Private key in hex: 0102030405060708090a0b0c0d0e0f101112131415161718191a1b1c1d1e1f20\n   Request url: localhost/v1/pdv/123-321\n   Body: {\"some\":\"file\"}\n   Digest will be made from `{\"some\":\"file\"}v1/pdv/123-321`\n   Digest in hex: 772d91d6dd8ff9c93cbd3bc888825f932964b301b32581c1e1dc36cdb5a5d869",
+      "type": "apiKey",
+      "name": "Signature",
+      "in": "header"
+    }
+  },
+  "security": [
+    {
+      "public_key": []
+    },
+    {
+      "signature": []
+    }
+  ]
 }
